--- a/flow/.eslintrc.json
+++ b/flow/.eslintrc.json
@@ -1,8 +1,8 @@
 {
   "extends": [
     "react-app",
+    "eslint:recommended",
     "plugin:jest/recommended",
-    "eslint-config-recommended",
     "plugin:flowtype/recommended"
   ],
   "plugins": ["flowtype", "jest", "react", "import", "prettier"],
