--- a/typescript/.eslintrc.json
+++ b/typescript/.eslintrc.json
@@ -1,8 +1,8 @@
 {
   "extends": [
     "react-app",
+    "eslint:recommended",
     "plugin:jest/recommended",
-    "eslint-config-recommended",
     "plugin:@typescript-eslint/recommended"
   ],
   "plugins": [
