--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-config-pipefy-typescript",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "TypeScript eslint rules",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,7 +20,7 @@
     "url": "https://github.com/pipefy/pipefy-eslint-config/issues"
   },
   "homepage": "https://github.com/pipefy/pipefy-eslint-config#readme",
-  "devDependencies": {
+  "dependencies": {
     "@typescript-eslint/eslint-plugin": "^2.9.0",
     "@typescript-eslint/parser": "^2.9.0",
     "eslint-config-react-app": "^5.0.2",
