--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-pipefy-typescript",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "TypeScript eslint rules",
   "main": "index.js",
   "scripts": {
@@ -10,10 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/pipefy/pipefy-eslint-config.git"
   },
-  "keywords": [
-    "eslint",
-    "typescript"
-  ],
+  "keywords": ["eslint", "typescript"],
   "author": "Pipefy-team",
   "license": "ISC",
   "bugs": {
